[gd_scene load_steps=3 format=3 uid="uid://ig4ajmnx7arn"]

[ext_resource type="Texture2D" uid="uid://d51h8c1nypl7" path="res://icon.svg" id="1_tttvn"]
[ext_resource type="Script" path="res://03GhostTrail/GhostTrailEffect/animated_ghost_trail.gd" id="2_ya0va"]

[node name="AnimatedGhostTrail" type="Sprite2D"]
texture = ExtResource("1_tttvn")
script = ExtResource("2_ya0va")

[node name="GhostSpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="GhostSpawnTimer" to="." method="_on_ghost_spawn_timer_timeout"]
